meego-im-framework (0.19.47~1) unstable; urgency=low

  * [UNRELEASED]

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Thu, 03 Mar 2011 09:41:02 +0200

meego-im-framework (0.19.46-1) unstable; urgency=low

  * Fixes: NB#230421 - Settings plugin needs to be moved to Time & language category
  * Fixes: NB#223052 - Unreadable fonts in Text input settings

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:55:31 +0200

meego-im-framework (0.19.45-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:46:34 +0200

meego-im-framework (0.19.44-1) unstable; urgency=low

  * Fix: small window shown at initial run.
  * Fixes: NB#215925 - Text input setting can not be opened from Search application


 -- huaming wang <huaming.wang@nokia.com>  Wed, 23 Feb 2011 11:36:28 +0200

meego-im-framework (0.19.43-1) unstable; urgency=low

  * New Release

 -- huaming wang <huaming.wang@nokia.com>  Thu, 17 Feb 2011 14:39:31 +0200

meego-im-framework (0.19.42-1) unstable; urgency=low

  * Fixes: NB#224974 - Virtual keyboard should be self-composited

 -- huaming wang <huaming.wang@nokia.com>  Thu, 17 Feb 2011 11:34:34 +0200

meego-im-framework (0.19.41-1) unstable; urgency=low

  * Changes: pass X key event times to im server and plugins

 -- huaming wang <huaming.wang@nokia.com>  Thu, 03 Feb 2011 10:27:23 +0200

meego-im-framework (0.19.40-1) unstable; urgency=low

  * New release

 -- huaming wang <huaming.wang@nokia.com>  Wed, 26 Jan 2011 10:33:48 +0200

meego-im-framework (0.19.39-1) unstable; urgency=low

  * Fixes: NB#194533 - Libminputcontext is creating two DBus connections for each started QT application

 -- huaming wang <huaming.wang@nokia.com>  Fri, 21 Jan 2011 12:57:43 +0200

meego-im-framework (0.19.38-1) unstable; urgency=low

  * Fixes: don't leak toolbars when a client connection is closed

 -- huaming wang <huaming.wang@nokia.com>  Tue, 04 Jan 2011 14:09:13 +0200
